ubah link bg contact

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,7 +154,7 @@ a {
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
-  background-image: url('/img/contact-bg.jpg');
+  background-image: url("https://i.imgur.com/CYI9uPn.jpg");
   background-size: 100vw;
   background-attachment: fixed;
   text-align: center;
