--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
 * {
   box-sizing: border-box;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=135913),default;
 }
 
 body {
   margin: 0;
-  /* font-family: "Lucida Grande"; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #5f5d60;
 }
@@ -22,6 +22,11 @@ a {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+}
+span{
+  color: orange;
+  font-size: 30pt;
+  font-weight: bold;
 }
 /* --------------------- */
 header{
@@ -110,7 +115,7 @@ header h3 {
   padding-left: 5%;
   padding-right: 5%;
   background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
-  height: 600px;
+  height: 500px;
   text-align: center;
 }
 
@@ -174,7 +179,7 @@ header h3 {
   transition: .3s;
 }
 .detail-box:hover{
-  box-shadow: 1px 1px 10px #7e7e7e;
+  box-shadow: 2px 2px 10px #7e7e7e;
   transition: .5s;
 }
 
@@ -234,11 +239,14 @@ input, textarea{
   border: 1px solid #dee7ec;
   width:50%;
   padding:10px;
-  margin:10px 0 20px 0;
+  margin:0px 0 25px 0;
+  border-radius: 10px;
   font-size: 18px;
 }
 .btn-submit{
-  background-color: #dee7ec;
-  color: #586267;
-  width: 30% !important;
+  margin-top: 20px;
+  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  color: #545454;
+  width: 25% !important;
+  border-radius: 5px;
 }
