--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ a {
   margin: 0 auto;
 }
 span{
-  color: orange;
+  color: rgb(135, 88, 0);
   font-size: 30pt;
   font-weight: bold;
 }
@@ -163,7 +163,7 @@ header h3 {
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
-  background-image: url("https://i.imgur.com/CYI9uPn.jpg");
+  background-image: url("./img/contact-bg.jpg");
   background-size: 100vw;
   background-attachment: fixed;
   /* height: 600px; */
@@ -174,7 +174,6 @@ header h3 {
   width: 100%;
 }
 .detail-box{
-  background-image: linear-gradient(-45deg, #93a5cf 0%, #e4efe9 100%);
   border-radius: 10px;
   padding: 5px 20px;
   margin:20px;
@@ -182,7 +181,8 @@ header h3 {
 }
 .detail-box:hover{
   box-shadow: 2px 2px 10px #7e7e7e;
-  transition: .2s;
+  transition: .3s;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .detail-box h2{
@@ -191,29 +191,34 @@ header h3 {
 }
 .detail-box img{
   width:100px;
-  margin-top:75px;
+  margin-top:90px;
   position: relative;
 }
 .left{
   float: left;
   margin:20px;
+  
 }
 .detail-left{ 
-  margin: 10px 5px 20px 160px;
-  padding-left: 50px;
-  padding-bottom: 5px;
+  background-image: linear-gradient(-45deg, #93a5cf 0%, #e4efe9 100%);
+  margin: 10px 5px 10px 160px;
+  padding:5px 0 20px 50px;
   border-left: 1.5px solid #858585;
-  position: relative;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .right{
   float: right;
   margin:20px;
 }
 .detail-right{
+  background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
   text-align: right;
-  margin: 10px 160px 20px 5px;
-  padding-right: 50px;
+  margin: 10px 160px 10px 5px;
+  padding:5px 50px 20px 0;
   border-right: 1.5px solid #858585;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 .detail-content{
   margin-top: 10px;
