--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,10 @@
   cursor: url(http://www.rw-designer.com/cursor-extern.php?id=135913),default;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
