--- a/responsive.css
+++ b/responsive.css
@@ -4,11 +4,11 @@
     width: 50%;
     margin-bottom: 50px;
   }
-
+  
   .main h1 {
     font-size: 32px;
   }
-
+  
   .heading h1 {
     font-size: 20px;
   }
@@ -19,40 +19,42 @@
   .teams {
     width: 100%;
   }
-
+  
   footer {
     text-align: center;
   }
-
+  
   .btn {
     width: 100%;
   }
-
-  .facebook {
-    margin-bottom: 10px;
-  }
-
+  
   .top-wrapper {
     text-align: left;
   }
-
-  /* Tambahkan CSS untuk header-right */
+  
   .header-right {
     display: none;
   }
-
-  /* Tambahkan CSS untuk menu-icon */
+  
   .menu-icon {
     display: block;
   }
-
+  
   .main h1 {
     font-size: 24px;
     line-height: 36px;
   }
-
+  
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
+  }
+  
+  .btn-submit {
+    width: 100%;
+  }
+
+  input, textarea {
+  width: 100%;
   }
 }
